# frontcache

./: Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  justfile  prek.toml
.github/workflows/: check.yml
charts/frontcache/: Chart.yaml  values.yaml
charts/frontcache/templates/: _helpers.tpl  bucket-config.yaml  grafana-dashboard.yaml  grafana.yaml  loadgen.yaml  minio-deployment.yaml  minio-service.yaml  minio-setup-job.yaml  otel-collector.yaml  prometheus.yaml  role.yaml  rolebinding.yaml  router-deployment.yaml  router-service.yaml  server-deployment.yaml  server-service.yaml  serviceaccount.yaml
client/: Cargo.toml
client/src/: lib.rs
loadgen/: Cargo.toml
loadgen/src/: main.rs
metrics/: Cargo.toml
metrics/src/: lib.rs
proto/: Cargo.toml  build.rs  cache.proto
proto/src/: lib.rs
py/: Cargo.toml  pyproject.toml
py/src/: lib.rs
router/: Cargo.toml
router/src/: lib.rs  main.rs  membership.rs  ring.rs  server.rs
server/: Cargo.toml
server/src/: block.rs  cache.rs  disk.rs  index.rs  lib.rs  limiter.rs  main.rs  membership.rs  prelude.rs  ring.rs  server.rs  store.rs
store/: Cargo.toml
store/src/: config.rs  lib.rs  store.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: bare.rs  e2e.rs
