[workspace]
members = [
    "proto",
    "metrics",
    "client",
    "server",
    "py",
]
default-members = [
    "proto",
    "metrics",
    "client",
    "server",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
tonic = "0.12"
prost = "0.13"
anyhow = "1.0"
bytes = "1.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6.1"
futures = "0.3"
tokio-stream = "0.1"
futures-util = "0.3"
parking_lot = "0.12"
memmap2 = "0.9"
redb = "3.1"
uuid = { version = "1.11", features = ["v4"] }
thiserror = "2.0"
object_store = { version = "0.13", features = ["aws", "gcp"] }
kube = { version = "3.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27", features = ["latest"] }
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
nix = { version = "0.31", features = ["fs"] }
mimalloc = "0.1"
pyo3 = { version = "0.27", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
pyo3-bytes = "0.5"
tonic-build = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opentelemetry = { version = "0.27", default-features = false }
opentelemetry_sdk = { version = "0.27", default-features = false, features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["metrics", "grpc-tonic"] }
tower = "0.5"
http = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = true
panic = "abort"
