[workspace]
members = [
    "store",
    "metrics",
    "loadgen",
    "server",
    "router",
    "tests",
]
default-members = [
    "store",
    "metrics",
    "loadgen",
    "server",
    "router",
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
tokio = { version = "1.50", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
anyhow = "1.0"
bytes = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6.1"
futures = "0.3"
futures-util = "0.3"
parking_lot = "0.12"
redb = "3.1"
uuid = { version = "1.21", features = ["v4"] }
short-uuid = "0.2"
tempfile = "3"
thiserror = "2.0"
object_store = { version = "0.13", features = ["aws", "gcp"] }
kube = { version = "3.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27", features = ["latest"] }
clap = { version = "4.5", features = ["derive", "env"] }
libc = "0.2"
nix = { version = "0.31", features = ["fs"] }
tikv-jemallocator = "0.6"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rayon = "1.11"
fastrand = "2"
aws-sdk-s3 = { version = "1", default-features = false, features = ["default-https-client", "http-1x", "rt-tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
opentelemetry = { version = "0.31", default-features = false }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["metrics"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["metrics", "grpc-tonic"] }
tokio-util = "0.7"
governor = "0.10"
tower = "0.5"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
http = "1.4"
hyper = "1"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = true
panic = "abort"
