[package]
name = "frontcache-loadgen"
version = "0.1.0"
edition = "2024"

[dependencies]
frontcache-metrics = { path = "../metrics" }
aws-sdk-s3 = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
fastrand = { workspace = true }
tikv-jemallocator = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
