[package]
name = "frontcache-py"
version = "0.1.0"
edition = "2024"

[lib]
name = "frontcache"
crate-type = ["cdylib"]

[dependencies]
frontcache-client = { path = "../client" }
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
pyo3-bytes = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
