[package]
name = "frontcache-router"
version = "0.1.0"
edition = "2024"

[dependencies]
frontcache-metrics = { path = "../metrics" }
axum = { workspace = true }
bytes = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
clap = { workspace = true }
tikv-jemallocator = { workspace = true }
opentelemetry = { workspace = true }
futures-util = { workspace = true }
xxhash-rust = { workspace = true }
rayon = { workspace = true }
http = { workspace = true }
rustls = { workspace = true }
