[package]
name = "frontcache-server"
version = "0.1.0"
edition = "2024"

[dependencies]
frontcache-proto = { path = "../proto" }
frontcache-metrics = { path = "../metrics" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
futures-util = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
memmap2 = { workspace = true }
redb = { workspace = true }
short-uuid = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
object_store = { workspace = true }
clap = { workspace = true }
tikv-jemallocator = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
opentelemetry = { workspace = true }
