[package]
name = "frontcache-server"
version = "0.1.0"
edition = "2024"

[dependencies]
frontcache-store = { path = "../store" }
frontcache-metrics = { path = "../metrics" }
axum = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
libc = { workspace = true }
rayon = { workspace = true }
redb = { workspace = true }
short-uuid = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tikv-jemallocator = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }
governor = { workspace = true }
opentelemetry = { workspace = true }
http = { workspace = true }
rustls = { workspace = true }
