[package]
name = "frontcache-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
frontcache-server = { path = "../server" }
frontcache-router = { path = "../router" }
frontcache-store = { path = "../store" }
frontcache-metrics = { path = "../metrics" }
reqwest = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tempfile = { workspace = true }
object_store = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
fastrand = { workspace = true }
